Fix CB02 Alignment

--- a/styles.css
+++ b/styles.css
@@ -71,7 +71,7 @@
     flex-wrap: nowrap;
     background-color: #3882F6;
     color: white;
-    padding: 4px 24px;
+    padding: 6px 32px;
     border-radius: 4px;
     border: 0px;
     font-size: 18px;
@@ -145,7 +145,7 @@
   #content-block-02{
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: space-evenly;
   }
 
   .content-block-02__header{
@@ -163,12 +163,12 @@
     align-items: center;
     flex-wrap: wrap;
     max-width: 150px;
-    margin-top: 24px;
+    margin-bottom: 64px;
   }
 
   .box{
-    width: 125px;
-    height: 125px;
+    width: 135px;
+    height: 135px;
     border: 3px solid  #3882F6;
     border-radius: 8px;
   }
@@ -176,11 +176,13 @@
   .text{
     text-align: center;
     font-weight: 300;
+    width: 200px;
+    margin-top: 12px;
   }
 
   .content-block-02__box-text-container-container{
     display: flex;
-    gap: 24px;
+    gap: 48px;
   }
   #content-block-03{
       background-color: #E5E7EB;
